# city-finder

./: .gitignore  INSTRUCTIONS.md  README.md  renovate.json
backend/: .gitignore  README.md  pom.xml
backend-cpp/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  lldbinit  vcpkg-configuration.json  vcpkg.json
backend-cpp/include/: app.h
backend-cpp/src/: CsvParser.h  app.cpp  main.cpp
backend-cpp/src/model/: City.h
backend-cpp/tests/: test_app.cpp
backend/checkstyle/: checkstyle.xml
backend/src/main/java/com/coveo/challenge/configurations/: CorsConfig.java  DataInitializer.java  GeolocationProperties.java  RequestLoggingFilter.java  SecurityProperties.java
backend/src/main/java/com/coveo/challenge/configurations/mappers/: CityMapper.java  CityRecordMapper.java
backend/src/main/java/com/coveo/challenge/models/: City.java  PaginatedData.java
backend/src/main/java/com/coveo/challenge/repositories/: CityEntityRepository.java  CityRepository.java  CityRepositoryImpl.java  NotFoundException.java
backend/src/main/java/com/coveo/challenge/repositories/entities/: CityEntity.java
backend/src/main/java/com/coveo/challenge/repositories/mappers/: CityEntityMapper.java  CityMapper.java  PaginatedCityEntityMapper.java  PaginatedCityMapper.java
backend/src/main/java/com/coveo/challenge/repositories/queries/: CityQueries.java
backend/src/main/java/com/coveo/challenge/repositories/specifications/: CitySpecification.java  CitySpecificationBuilder.java
backend/src/main/java/com/coveo/challenge/resources/: CityResource.java  ExceptionHandler.java  SuggestionsResource.java
backend/src/main/java/com/coveo/challenge/services/: CityService.java  SuggestionsService.java
backend/src/main/java/com/coveo/challenge/utils/: FileException.java  FileReader.java  TsvException.java  TsvParser.java
backend/src/main/resources/: application.yml
backend/src/main/resources/data/: cities_canada-usa.tsv
backend/src/test/java/com/coveo/challenge/repositories/: CityEntityRepositoryTest.java  CityRepositoryImplTest.java
backend/src/test/java/com/coveo/challenge/resources/: SuggestionsResourceTest.java
backend/src/test/java/com/coveo/challenge/services/: CityServiceTest.java  SuggestionsServiceTest.java
frontend/: .gitignore  README.md  package.json
frontend/src/: App.test.tsx  App.tsx  index.tsx
frontend/src/components/: ResultList.tsx  SearchBar.tsx
frontend/src/models/: searchedCity.ts
(+31 files in other folders)
